[package]
name = "node-rs"
version = "0.1.0"
authors = ["0xAAE <avramenko.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.13.0"
log = "0.4"
log4rs = { version = "0.9.0", features = ["console_appender", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger", "pattern_encoder", "threshold_filter"] }