[package]
name = "node-rs"
version = "0.1.0"
authors = ["0xAAE <avramenko.a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csp2p-rs = { path = "../csp2p-rs"}
rust-ini = "0.13.0"
log = "0.4"
log4rs = { version = "0.9.0", features = ["console_appender", "rolling_file_appender", "compound_policy", "fixed_window_roller", "size_trigger", "pattern_encoder", "threshold_filter"] }
bitflags = "1.2.1"
blake2s_simd = "0.5.10"
hex = "0.4"
base58 = "0.1"
# num = "0.2.1"
# hashbrown = "0.6.3" # port of Google's high-performance SwissTable hash map
# multimap = "0.8.0" # Implemented as a thin wrapper around std::collections::HashMap
# evmap = "7.1.3" # A lock-free, eventually consistent, concurrent multi-value map.
# bitcoin = "0.23.0" # bitcoin::util::key::PublicKey and much more...